npc overlap fix

--- a/saylua/static-source/scss/components/_npc.scss
+++ b/saylua/static-source/scss/components/_npc.scss
@@ -1,4 +1,4 @@
-.npc-interaction {
+.npc-display {
   display: flex;
   text-align: center;
 
